--- a/src/Components/DesciptionBox/DescriptionBox.css
+++ b/src/Components/DesciptionBox/DescriptionBox.css
@@ -1,20 +1,30 @@
 .descriptionbox {
-    margin: 20px 170px;
+    margin: 50px 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    & hr {
+        width: 200px;
+        height: 6px;
+        border-radius: 10px;
+        background: #252525;
+    }
 }
 
 .discriptionbox-navigator {
     display: flex;
+    justify-content: center;
 }
 
 .discriptionbox-nav-box {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
+    font-size: 50px;
     font-weight: 600;
     width: 171px;
     height: 70px;
-    border: 1px solid #d0d0d0;
 }
 
 .discriptionbox-nav-box .fade {
@@ -26,12 +36,18 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    border: 1px solid #d0d0d0;
     padding: 48px;
     padding-bottom: 70px;
 }
 @media (max-width: 480px) {
     .descriptionbox {
-        margin: auto;
+        margin: 50px 0 0;
+        & hr {
+            width: 120px;
+        }
+    }
+
+    .discriptionbox-nav-box {
+        font-size: 36px;
     }
 }
